<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.BeerBuyActivity">

    <TextView
        android:id="@+id/tvUserTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/user_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/etUserName"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:inputType="text"
        android:lines="1"
        app:layout_constraintLeft_toRightOf="@id/barrier"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvUserAddressTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/user_address"
        app:layout_constraintBaseline_toBaselineOf="@+id/etUserAddress"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/etUserAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:inputType="text"
        android:lines="1"
        app:layout_constraintLeft_toRightOf="@id/barrier"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUserName"/>

    <TextView
        android:id="@+id/tvUserContractTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/user_contract"
        app:layout_constraintBaseline_toBaselineOf="@+id/etUserContract"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/etUserContract"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:inputType="phone"
        android:lines="1"
        app:layout_constraintLeft_toRightOf="@id/barrier"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUserAddress"/>

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="tvUserTitle,tvUserAddressTitle,tvUserContractTitle"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <View
        android:id="@+id/view01"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUserContract"/>

    <ImageView
        android:id="@+id/ivBeer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view01"/>

    <TextView
        android:id="@+id/tvBeerName"
        android:textStyle="bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:lines="1"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@id/ivBeer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view01"
        tools:text="Beer"/>

    <TextView
        android:id="@+id/tvBeerPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/ivBeer"
        app:layout_constraintTop_toBottomOf="@id/tvBeerName"
        tools:text="$29.5"/>

    <TextView
        android:id="@+id/tvBuyQuantityTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/buy_quantity"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnQuantityDecrease"
        app:layout_constraintLeft_toRightOf="@id/ivBeer"/>

    <Button
        android:id="@+id/btnQuantityDecrease"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:text="@string/buy_decrease"
        app:layout_constraintLeft_toRightOf="@id/tvBuyQuantityTitle"
        app:layout_constraintTop_toBottomOf="@id/tvBeerPrice"/>

    <TextView
        android:id="@+id/tvBuyQuantity"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:lines="1"
        android:maxLength="3"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnQuantityDecrease"
        app:layout_constraintLeft_toRightOf="@id/btnQuantityDecrease"
        tools:text="1"/>

    <Button
        android:id="@+id/btnQuantityIncrease"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginLeft="8dp"
        android:text="@string/buy_increase"
        app:layout_constraintLeft_toRightOf="@id/tvBuyQuantity"
        app:layout_constraintTop_toBottomOf="@id/tvBeerPrice"/>

    <View
        android:id="@+id/view02"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBeer"/>

    <TextView
        android:id="@+id/tvTotalPriceTitle"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/buy_total_price"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view02"/>

    <TextView
        android:id="@+id/tvTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="28sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tvTotalPriceTitle"
        app:layout_constraintLeft_toRightOf="@id/tvTotalPriceTitle"
        app:layout_constraintTop_toBottomOf="@id/view02"
        tools:text="$29.5"/>

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/buy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalPriceTitle"/>

</android.support.constraint.ConstraintLayout>