<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="5dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivBeer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tvName"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginRight="8dp"
            android:lines="1"
            android:textSize="16sp"
            app:layout_constraintRight_toLeftOf="@id/ivBeer"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Beer"/>

        <TextView
            android:id="@+id/tvAbvTitle"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/abv"
            app:layout_constraintEnd_toStartOf="@+id/ivBeer"
            app:layout_constraintTop_toBottomOf="@id/tvName"/>

        <TextView
            android:id="@+id/tvAbv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            tools:text="4.6"/>

        <TextView
            android:id="@+id/tvIbuTitle"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/ibu"
            app:layout_constraintEnd_toStartOf="@+id/ivBeer"
            app:layout_constraintTop_toBottomOf="@id/tvAbvTitle"/>

        <TextView
            android:id="@+id/tvIbu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/tvAbv"
            tools:text="10"/>

        <TextView
            android:id="@+id/tvSrmTitle"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/srm"
            app:layout_constraintEnd_toStartOf="@+id/ivBeer"
            app:layout_constraintTop_toBottomOf="@id/tvIbuTitle"/>

        <TextView
            android:id="@+id/tvSrm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="@+id/barrier"
            app:layout_constraintTop_toBottomOf="@+id/tvIbu"
            tools:text="20"/>

        <android.support.constraint.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:barrierDirection="left"
            app:constraint_referenced_ids="tvIbuTitle,tvSrmTitle,tvAbvTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>